force-app/main/default/objects/LLC_BI__Connection_Role__c/LLC_BI__Connection_Role__c.object-meta.xml
<CustomObject>
    <description>The Connection Role Object, used to manage the roles and their reciprocals that specify the capacity in which two relationships are connected.</description>
    <label>Connection Role</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>