force-app/main/default/objects/LLC_BI__Connection_Role__c/fields/LLC_BI__Enable_Treasury_Maintenance_Display__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Enable_Treasury_Maintenance_Display__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators populate this optional checkbox field. When selected, contacts and deposits for connected relationships display as authorized users and analyzed accounts on the Treasury Maintenance page. By default, the field is not selected, and the contacts and deposits do not display.</description>
    <inlineHelpText>Contacts and deposits for connected relationships display as authorized users and analyzed accounts.</inlineHelpText>
    <label>Enable Treasury Maintenance Display</label>
    <type>Checkbox</type>
</CustomField>