force-app/main/default/objects/LLC_BI__Connection_Role__c/fields/LLC_BI__Is_Household_Member__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Household_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Administrators manually select this optional field. When enabled, it denotes a connection role as a household member. When disabled, it denotes that the connection role is not a household member. By default, it is disabled.</description>
    <label>Is Household Member</label>
    <type>Checkbox</type>
</CustomField>