force-app/main/default/objects/LLC_BI__Connection_Role__c/fields/LLC_BI__Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Reciprocal_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to specify the role associated directly to a connection role. When a connection role is chosen, the reciprocal role will auto-populate to establish the capacity in which the two relationships are connected.</description>
    <label>Reciprocal Role</label>
    <referenceTo>LLC_BI__Connection_Role__c</referenceTo>
    <relationshipLabel>Reciprocated Roles</relationshipLabel>
    <relationshipName>Reciprocated_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>