force-app/main/default/objects/LLC_BI__Connection_Role__c/fields/LLC_BI__Role_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Role_Type__c</fullName>
    <description>This field is optional and is used to specify the type/category of connection role</description>
    <label>Role Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Non-Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>