force-app/main/default/objects/LLC_BI__Connection_Role__c/fields/LLC_BI__Use_in_NCC__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Use_in_NCC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Admins select this optional boolean field to allow the connection role to be selected in NCC. By default, it is set to false.</description>
    <inlineHelpText>Allow the connection role to be selected in NCC.</inlineHelpText>
    <label>Use in NCC</label>
    <type>Checkbox</type>
</CustomField>